--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -28,7 +28,11 @@
 </div>
 
 <div class="block">
-   
+    <audio controls="controls" height="100" width="100">
+        <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
+        <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
+        <embed height="100" width="100" src="./音乐疗法/纯音乐-高山流水.mp3" />
+    </audio>
 </div>
 
 <div class="block">
