--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -28,26 +28,15 @@
 </div>
 
 <div class="block">
-    <audio controls="controls" height="100" width="100">
+    <div class="top1">
+        <h4>高山流水</h4>
+    </div>
+    <div class="down">
+        <audio controls="controls" height="100" width="100">
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
         <embed height="100" width="100" src="./音乐疗法/纯音乐-高山流水.mp3" />
     </audio>
-</div>
-
-<div class="block">
-    <div class="top1">
-        <h4>五点支撑训练</h4>
-    </div>
-    <div class="down">
-        <div class="row black">每天4组  每组10-15次</div>
-        <div class="row">
-            说明：取仰卧位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着床与肩等宽。持续10秒,放松回到仰卧位.
-        </div>
-        <div class="row brown">※     维持腰椎背伸的角度以不引发疼痛刺激为准</div>
-        <div class="row4">
-            <img src="./脊柱康复训练_files/u3397.png" class="u34">
-        </div>
     </div>
 </div>
 <div class="block">
