--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -29,14 +29,13 @@
 
 <div class="block">
     <div class="top1">
-        <h4>高山流水</h4>
-    </div>
-    <div class="down">
-        <audio controls="controls" height="100" width="100">
+        <h4>高山流水
+        <audio controls="controls" height="100" width="100" style="color: red; margin-left: 20px">
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
         <embed height="100" width="100" src="./音乐疗法/纯音乐-高山流水.mp3" />
-    </audio>
+        </h4>
+        </audio>
     </div>
 </div>
 
