--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -28,8 +28,9 @@
 </div>
 
 <div class="block">
-    <div class="top1">
-        <h4>高山流水
+    <div>
+        <h4>高山流水</h4>
+        <h4>
         <audio controls="controls">
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
