--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -31,13 +31,11 @@
     <div>
         <br/>
         <h4>&nbsp;&nbsp;&nbsp;&nbsp;高山流水</h4>
-        <h4>
         <audio controls="controls">
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
-        <embed height="100" width="100" src="./音乐疗法/纯音乐-高山流水.mp3" />
+        <embed src="./音乐疗法/纯音乐-高山流水.mp3" />
         </audio>
-        </h4>
         <br/>
     </div>
 </div>
