--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -30,12 +30,54 @@
 <div class="block">
     <div>
         <br/>
-        <h4>&nbsp;&nbsp;&nbsp;&nbsp;高山流水</h4>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">高山流水</font></h4>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <audio controls="controls">
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/mp3" />
         <source src="./音乐疗法/纯音乐-高山流水.mp3" type="audio/ogg" />
         <embed src="./音乐疗法/纯音乐-高山流水.mp3" />
+        </audio>
+        <br/>
+    </div>
+</div>
+
+<div class="block">
+    <div>
+        <br/>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">春江花月夜(古曲)</font></h4>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <audio controls="controls">
+        <source src="./音乐疗法/纯音乐-春江花月夜(古曲).mp3" type="audio/mp3" />
+        <source src="./音乐疗法/纯音乐-春江花月夜(古曲).mp3" type="audio/ogg" />
+        <embed src="./音乐疗法/纯音乐-春江花月夜(古曲).mp3" />
+        </audio>
+        <br/>
+    </div>
+</div>
+
+<div class="block">
+    <div>
+        <br/>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">蓝色多瑙河</font></h4>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <audio controls="controls">
+        <source src="./音乐疗法/纯音乐-蓝色多瑙河.mp3" type="audio/mp3" />
+        <source src="./音乐疗法/纯音乐-蓝色多瑙河.mp3" type="audio/ogg" />
+        <embed src="./音乐疗法/纯音乐-蓝色多瑙河.mp3" />
+        </audio>
+        <br/>
+    </div>
+</div>
+
+<div class="block">
+    <div>
+        <br/>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">每天冥想</font></h4>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <audio controls="controls">
+        <source src="./音乐疗法/每天冥想.mp3" type="audio/mp3" />
+        <source src="./音乐疗法/每天冥想.mp3" type="audio/ogg" />
+        <embed src="./音乐疗法/每天冥想.mp3" />
         </audio>
         <br/>
     </div>
