--- a/音乐疗法.htm
+++ b/音乐疗法.htm
@@ -27,7 +27,7 @@
     音乐疗法（music therapy），是通过生理和心理两个方面的途径来治疗疾病的一种方法。因为音乐的频率、节奏和有规律的声波振动，是一种物理能量，而适度的物理能量会引起人体组织细胞发生和谐共振现象，能使颅腔、胸腔或某一个组织产生共振，这种声波引起的共振现象，会直接影响人的脑电波、心率、呼吸节奏等。心理治疗家认为，音乐能改善心理状态。通过音乐这一媒介，可以抒发感情，促进内心的流露和情感的相互交流。现今有越来越多医疗从业人员重新发现声音在治病和调整身心平衡方面的功效。量子力学已经证明了宇宙万物都是由振动力构成，人体也不例外。一般认为声音是最重要的一种振动能量，由此产生其它各种形态的振动。不同能量场的振动会产生不同的效果，而且任何振动力都会对我们的身心造成有利或有害的影响。良性的音乐能提高大脑皮层的兴奋性，可以改善人们的情绪，激发人们的感情，振奋人们的精神。同时有助于消除心理、社会因素所造成的紧张、焦虑、忧郁、恐怖等不良心理状态，提高应激能力。音乐应根据病人的不同因人而异地有所选择。合适的音乐治疗，常可取得很好的疗效。以下提供几首普遍使用的舒缓音乐供大家试听，大家一定要结合自身的实际情况选择，从而达到治疗的目的。如有需求可去相关机构专业治疗。
 </div>
 
-<div class="block" align="center">
+<div class="block" align="center" style="background-color:#CCFFCC;">
     <div>
         <br/>
         <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">高山流水</font></h4>
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="block" align="center">
+<div class="block" align="center" style="background-color:#CCFFCC;">
     <div>
         <br/>
         <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">春江花月夜(古曲)</font></h4>
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<div class="block" align="center">
+<div class="block" align="center" style="background-color:#CCFFCC;">
     <div>
         <br/>
         <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">蓝色多瑙河</font></h4>
@@ -69,7 +69,7 @@
     </div>
 </div>
 
-<div class="block" align="center">
+<div class="block" align="center" style="background-color:#CCFFCC;">
     <div>
         <br/>
         <h4>&nbsp;&nbsp;&nbsp;&nbsp;<font color="#660000">每天冥想</font></h4>
