--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -50,7 +50,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明：取站位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着床与肩等宽。持续10秒,放松回到仰卧位.
+            说明：取仰卧位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着床与肩等宽。持续10秒,放松回到仰卧位.
         </div>
         <div class="row brown">※     维持腰椎背伸的角度以不引发疼痛刺激为准</div>
         <div class="row4">
@@ -65,7 +65,7 @@
     <div class="down">
         <div class="row black">每天4组  每组20-30分钟\次</div>
         <div class="row">
-            说明：取仰卧位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着说明:疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
+            说明：取站位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着说明:疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
         </div>
         <div class="row brown">※     要穿有弹性的运动鞋;行走时间以不引发疼痛刺激为准</div>
         <div class="row4">
