--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -50,7 +50,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明：取仰卧位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着床与肩等宽。持续10秒,放松回到仰卧位.
+            说明：仰卧位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着床与肩等宽。腰腹向上抬起持续10秒,放松回到仰卧位.
         </div>
         <div class="row brown">※     维持腰椎背伸的角度以不引发疼痛刺激为准</div>
         <div class="row4">
@@ -143,7 +143,7 @@
     <div class="down">
         <div class="row black">每天4组  每组30-40次</div>
         <div class="row">
-            说明:身体自然站立,两上肢屈曲后伸,胸部前挺,头颈慢慢后仰,两侧肩胛骨尽量靠拢,每个动作至少维持5秒以上
+            说明:身体自然站立,两上肢屈曲抬起并后伸,胸部前挺,头颈慢慢后仰,两侧肩胛骨尽量靠拢,每个动作至少维持5秒以上
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3477.png" class="u34">
