--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -34,7 +34,7 @@
     <div class="down">
         <div class="row black">每天2-3组  每组10-20次</div>
         <div class="row row3">
-            说明：患者站立在椅背后,将椅背顶在腹部（肚脐下两指）向前弯腰至最大限度，然后再向下牵振腰部。牵振幅度一定要很小（约5-10公分），不是完全挺身后做再次弯腰动作。牵振时在腰背部要达到一种牵张感。
+            说明：患者站立在椅背后,将椅背顶在腹部（肚脐下两指）向前弯腰至最大限度，然后再向下牵振腰部。牵振幅度一定要很小（约5-10公分），不是完全挺身后做再次弯腰动作。牵振时腰背部要有牵张感。
         </div>
         <div class="row brown">※     每次向下牵振的幅度不要太大</div>
         <div class="row4">
@@ -65,7 +65,7 @@
     <div class="down">
         <div class="row black">每天4组  每组20-30分钟\次</div>
         <div class="row">
-            说明：取站位,双上肢屈肘,双手放于胸前,双下肢屈膝,双脚着说明:疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
+            说明：正常行走。疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
         </div>
         <div class="row brown">※     要穿有弹性的运动鞋;行走时间以不引发疼痛刺激为准</div>
         <div class="row4">
@@ -81,7 +81,7 @@
     <div class="down">
         <div class="row black">每天4组  每组5-6次</div>
         <div class="row">
-            说明:站立或端坐位,双侧肩胛关节同时向后做摇转,颈椎放松,保持略微后仰状态,5-6次,然后再做向前摇转,5-6次
+            说明:站立或端坐位,双侧肩胛关节同时向后摇转,颈椎放松,保持略微后仰状态,做5-6次,然后再向前摇转,做5-6次
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3423.png" class="u34">
@@ -96,7 +96,7 @@
     <div class="down">
         <div class="row black">每天4组  每组15-20次</div>
         <div class="row">
-            说明: 站立,两足分开与肩同宽,左右手臂随头颈向右后转,目视右手,还原.左右手臂随头颈向左后转,目视左手,还原
+            说明: 站立,双脚分开与肩同宽,左右手臂随头颈向右后转,目视右手,还原.然后左右手臂随头颈向左后转,目视左手,还原
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3436.png" class="u35" style="height:200px;">
@@ -113,7 +113,7 @@
     <div class="down">
         <div class="row black">每天4组  每组5-6次</div>
         <div class="row">
-            说明:患者先将头转向健侧约45度角,然后用自己健侧手扳住头得患侧后部,将头向健侧斜前方扳至极限位,小幅度反复振牵3-4次,然后头颈复原并放松.再向患者转头,做同样的动作,次数可以略少些.两边做完后则完成一组练习
+            说明:患者先将头转向健侧约45度角,然后用自己健侧手扳住头得患侧后部,将头向健侧斜前方扳至极限位,小幅度反复振牵3-4次,然后头颈复原并放松.再向患侧转头,做同样的动作,次数可以略少些.两边做完后则完成一组练习
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3451.png" class="u34">
@@ -128,7 +128,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明:取俯卧位在床上，双臂后伸向上抬，但腰腹部紧贴床面，使得腰部出现背伸的曲度，维持10秒钟后，放松回到俯卧位状态，头转向一侧休息10秒钟左右，再重复上述动作
+            说明:俯卧位，双臂后伸向上抬，但腰腹部紧贴床面，使得腰部出现背伸的曲度，维持10秒钟后，放松回到俯卧位状态，头转向一侧休息10秒钟左右，再重复上述动作
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3464.png" class="u34">
@@ -158,7 +158,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明:站立,两足分开与肩同宽,双手置于身体两侧,手臂伸直,上身用力,在保持上半身不扭曲的前提下,依靠腰腹力量尽可能向左(右)侧屈体,让左(右)手尽可能接近左(右)膝,到达极限时稍作停顿,然后慢慢恢复直立状态
+            说明:靠墙站立,两足分开与肩同宽,双手置于身体两侧,手臂伸直,上身用力,在保持上半身不扭曲的前提下,依靠腰腹力量尽可能向左(右)侧屈体,让左(右)手尽可能接近左(右)膝,到达极限时稍作停顿,然后慢慢恢复直立状态
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3490.png" class="u35" style="height:145px;">
@@ -174,7 +174,7 @@
     <div class="down">
         <div class="row black">每天4组  每组15-20次</div>
         <div class="row">
-            说明:患者坐于椅子上,双腿自然下垂,上身保持直立,旋转侧屈至最大限度持续数秒,再回原位
+            说明:患者坐于椅子上,双腿自然下垂,上身保持直立,侧转至最大限度持续数秒,再回原位
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3505.png" class="u35">
@@ -190,7 +190,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明：取俯卧位，双侧上肢支撑在床面，做俯卧撑动作，但腰腹部以下并不抬起，维持10秒后，放松回到俯卧位状态。
+            说明：俯卧位，双侧上肢支撑在床面，做俯卧撑动作，但腰腹部以下并不抬起，维持10秒后，放松回到俯卧位状态。
         </div>
         <div class="row brown">※维持腰椎背伸的角度以不引发疼痛刺激为准</div>
         <div class="row4">
@@ -208,7 +208,7 @@
     <div class="down">
         <div class="row black">每天4组  每组15-20次</div>
         <div class="row">
-            说明:站立,两足分开与肩同宽,双手交叉紧贴后颈部，用力顶头颈，头颈则向后用力，互相抵抗
+            说明:站立,双脚分开与肩同宽,双手交叉紧贴后颈部，用力前拉头颈，头颈则向后用力，互相抵抗
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3537.png" class="u35">
@@ -223,7 +223,7 @@
     <div class="down">
         <div class="row black">每天3-4组  每组15-20次</div>
         <div class="row">
-            说明:患者坐位或者仰卧位,患侧下肢翘起二郎腿,然后用双手抱住膝关节处,向胸部抱拉,稳住膝关节,坚持10到20秒,然后再放松膝关节(或放下翘起的二郎腿),等到腰骶区或后臀部牵拉感完全消失为完成1次训练
+            说明:患者坐位或仰卧位,患侧下肢翘起二郎腿,然后用双手抱住膝关节处,向胸部抱拉,稳住膝关节,坚持10到20秒,然后再放松膝关节(或放下翘起的二郎腿),等到腰骶区或后臀部牵拉感完全消失为完成1次训练
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3550.png" class="u35">
@@ -238,7 +238,7 @@
     <div class="down">
         <div class="row black">每天4-6组  每组10-20次</div>
         <div class="row">
-            说明：取端坐位，向上方挺胸挺腹到极限位,使腰椎后关节全都锁紧.然后,放松下沉胸椎及腰椎至其放松极限,此时腰椎后关节完全打开,椎间韧带因此而拉长,如果向上挺和向下放松动作时有疼痛或牵拉感,以这种疼痛略微出现的位置为运动极限
+            说明：端坐位，向前上方挺胸挺腹到极限位,使腰椎后关节全都锁紧.然后,放松下沉胸椎及腰椎至其放松极限,此时腰椎后关节完全打开,椎间韧带因此而拉长,如果向上挺和向下放松动作时有疼痛或牵拉感,以这种疼痛略微出现的位置为运动极限
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3563.png" class="u35">
