--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -158,7 +158,7 @@
     <div class="down">
         <div class="row black">每天4组  每组10-15次</div>
         <div class="row">
-            说明:靠墙站立,两足分开与肩同宽,双手置于身体两侧,手臂伸直,上身用力,在保持上半身不扭曲的前提下,依靠腰腹力量尽可能向左(右)侧屈体,让左(右)手尽可能接近左(右)膝,到达极限时稍作停顿,然后慢慢恢复直立状态
+            说明:靠墙站立,两脚分开与肩同宽,双手置于身体两侧,手臂伸直,上身用力,在保持上半身不扭曲的前提下,依靠腰腹力量尽可能向左(右)侧屈体,让左(右)手尽可能接近左(右)膝,到达极限时稍作停顿,然后慢慢恢复直立状态
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3490.png" class="u35" style="height:145px;">
