--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -65,7 +65,7 @@
     <div class="down">
         <div class="row black">每天4组  每组20-30分钟\次</div>
         <div class="row">
-            说明：正常行走。疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
+            说明：正常行走，或疾走。疾走,如同急行军,是最佳的脊柱基本功能维系方法,疾走时,需要脊柱自然维系生理曲度,椎旁肌肉处于紧张的工作状态
         </div>
         <div class="row brown">※     要穿有弹性的运动鞋;行走时间以不引发疼痛刺激为准</div>
         <div class="row4">
@@ -249,7 +249,7 @@
 <div class="principle">
     康复锻炼原则：<br>
     1、     遵运动处方<br>
-    2、     不以引发疼痛为主<br>
+    2、     以不引发疼痛为主<br>
     3、     循序渐进，持之以恒<br>
     4、     遵运动原则，防意外
 
