--- a/入院宣教正文.htm
+++ b/入院宣教正文.htm
@@ -277,16 +277,9 @@
         <div class="down">
             <div class="row">
                 <div class="left">1. </div>
-                <div class="right">矫形鞋的选择： 遵医嘱到护士站购买相应鞋款。</div>
+                <div class="right">矫形鞋治疗遵医嘱进行矫形鞋功能锻炼。</div>
             </div>
-            <div class="row">
-                <div class="left">2. </div>
-                <div class="right">矫形鞋的厚度：一般由经治医生根据骨盆倾斜旋转的程度而定。</div>
-            </div>
-            <div class="row">
-                <div class="left">3. </div>
-                <div class="right">穿着方法：当医生允许下床行走锻炼时方可穿着矫形鞋，行走时保持身体直立，行走速度不要太快，循序渐进；依病情及身体状况而定行走时间，一般以不感疲劳，能耐受无特殊不适为宜。</div>
-                </div>
+         
         </div>
     </div>
 
