--- a/入院宣教正文.htm
+++ b/入院宣教正文.htm
@@ -277,9 +277,12 @@
         <div class="down">
             <div class="row">
                 <div class="left">1. </div>
-                <div class="right">矫形鞋治疗遵医嘱进行矫形鞋功能锻炼。</div>
+                <div class="right">严格遵医嘱穿着与自身病情相匹配的矫正鞋。</div>
             </div>
-         
+            <div class="row">
+                <div class="left">2. </div>
+                <div class="right">行走锻炼注意事项与主管医生沟通。</div>
+            </div>
         </div>
     </div>
 
