--- a/入院宣教正文.htm
+++ b/入院宣教正文.htm
@@ -234,7 +234,7 @@
     </div>
 
 
-    <div class="block">
+<!--     <div class="block">
         <div class="top">七、理疗牵引须知：</div>
         <div class="down">
             <div class="row">
@@ -250,11 +250,11 @@
                 <div class="right">牵引后平躺休息15分钟方可返回病房。</div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="block">
-        <div class="top">八、功能锻炼须知：</div>
+        <div class="top">七、功能锻炼须知：</div>
         <div class="down">
             <div class="row">
                 <div class="left">1. </div>
@@ -273,7 +273,7 @@
 
 
     <div class="block">
-        <div class="top">九、矫形鞋治疗须知：</div>
+        <div class="top">八、矫形鞋治疗须知：</div>
         <div class="down">
             <div class="row">
                 <div class="left">1. </div>
@@ -287,7 +287,7 @@
     </div>
 
 
-    <div class="block">
+<!--     <div class="block">
         <div class="top">十、颈（腰）围的使用须知：</div>
         <div class="down">
             <h3>严格遵医嘱使用颈（腰）围</h3>
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="row" style="text-align:center;">
         <img src="./入院宣教正文_files/u11.png" class="u11">
