--- a/center.htm
+++ b/center.htm
@@ -3,23 +3,8 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no;">
-    <link href="./脊柱康复训练_files/bootstrap.min.css" rel="stylesheet">
-    <link href="./脊柱康复训练_files/enter2.css" rel="stylesheet">
-    <link href="./脊柱康复训练_files/recover.css" rel="stylesheet">
-<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-.en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
-}
-
-.en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}
-</style><style type="text/css">@media print{#STTBimg{ display:none; }#STTBimg2{ display:none; }}</style></head>
+    
+<style type="text/css">@media print{#STTBimg{ display:none; }#STTBimg2{ display:none; }}</style></head>
 <body><img id="STTBimg" src="chrome-extension://chinfkfmaefdlchhempbfgbdagheknoj/arrows/arrow_blue.png" style="opacity: 0.5; position: fixed; width: 50px; height: auto; z-index: 2147483647; border: 0px; padding: 0px; right: 20px; top: 50%; margin: -25px 0px 0px; cursor: pointer; display: none;">
 
 <div class="block">
