--- a/center.htm
+++ b/center.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0045)http://testcas.91dzsw.cn:82/html/recover.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <title>正骨科简介</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no;">
     
 <style type="text/css">@media print{#STTBimg{ display:none; }#STTBimg2{ display:none; }}</style></head>
