--- a/center.htm
+++ b/center.htm
@@ -64,7 +64,7 @@
             <img src="./center6.jpg" class="u34">
         </div>
          <div class="row4">
-            <img src="./4qrcode.jpg" class="u34">
+            <img src="./4qrcode.jpg" width="100%">
         </div>
     </div>
 </div>
