--- a/脊柱康复训练.htm
+++ b/脊柱康复训练.htm
@@ -100,7 +100,7 @@
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3436.png" class="u35" style="height:200px;">
-            <img src="./脊柱康复训练_files/u3438.png" class="u35" style="height:200px;">
+<!--             <img src="./脊柱康复训练_files/u3438.png" class="u35" style="height:200px;"> -->
         </div>
     </div>
 </div>
@@ -162,7 +162,7 @@
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3490.png" class="u35" style="height:145px;">
-            <img src="./脊柱康复训练_files/u3492.png" class="u35" style="height:145px;">
+<!--             <img src="./脊柱康复训练_files/u3492.png" class="u35" style="height:145px;"> -->
         </div>
     </div>
 </div>
@@ -178,7 +178,7 @@
         </div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3505.png" class="u35">
-            <img src="./脊柱康复训练_files/u3507.png" class="u35">
+<!--             <img src="./脊柱康复训练_files/u3507.png" class="u35"> -->
         </div>
     </div>
 </div>
@@ -195,8 +195,8 @@
         <div class="row brown">※维持腰椎背伸的角度以不引发疼痛刺激为准</div>
         <div class="row4">
             <img src="./脊柱康复训练_files/u3520.png" class="u34">
-            <img src="./脊柱康复训练_files/u3522.png" class="u34">
-            <img src="./脊柱康复训练_files/u3524.png" class="u34">
+<!--             <img src="./脊柱康复训练_files/u3522.png" class="u34">
+            <img src="./脊柱康复训练_files/u3524.png" class="u34"> -->
         </div>
     </div>
 </div>
