--- a/center.htm
+++ b/center.htm
@@ -71,7 +71,7 @@
     
     <div class="down">
          <div class="row4">
-            <img src="./4qrcode.jpg" width="100%">
+           &nbsp;&nbsp;&nbsp;&nbsp; <img src="./4qrcode.jpg" width="100%">
         </div>
     </div>
 </div>
