--- a/入院宣教.htm
+++ b/入院宣教.htm
@@ -22,7 +22,7 @@
 </style></head>
 <body>
     <h2>住院病人健康宣教</h2>
-    <h4>空军特色医学中心</h4>
+<!--     <h4>空军特色医学中心</h4> -->
     <h4>中西医结合正骨治疗科</h4>
     <p>冯天有教授创立的脊柱（定点）旋转复位法，手法稳、准、轻、巧，病人不痛苦，缩短了病程，治疗效果显著，是保守治疗损伤退变性脊柱疾病的高科技含量新方法。</p>
     <a href="./入院宣教正文.htm"><button>点击开启健康之旅</button></a>
