--- a/出院宣教.htm
+++ b/出院宣教.htm
@@ -22,7 +22,7 @@
 </style></head>
 <body>
 <h2>健康教育</h2>
-<h4>空军特色医学中心</h4>
+<!-- <h4>空军特色医学中心</h4> -->
 <h4>中西医结合正骨治疗科</h4>
 <p>温馨提示：此内容属于广泛宣教内容，住院病人出院前应和自己的经治医生沟通，实施个体化锻炼方法，以确保手法疗效，谢谢合作！祝贺您康复出院！</p>
 <a href="出院宣教正文.htm"><button>点击开启健康之旅</button></a>
