--- a/video.htm
+++ b/video.htm
@@ -5,11 +5,11 @@
     
 <body>
 
-<div class="block">
+<div class="block" align="center">
 
     <div class="down">
       <div class="row4">
-            <h3>思路高 输液泵的操作方法</h3>
+            <h2>思路高 输液泵的操作方法</h2>
             <video width="640" height="480" align="center" controls>
                 <source src="./1.mp4" type="video/mp4">    
             </video>            
