--- a/video.htm
+++ b/video.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0045)http://testcas.91dzsw.cn:82/html/recover.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>videos</title>
+    <title>操作视频</title>
     
 <body>
 
