--- a/intro.htm
+++ b/intro.htm
@@ -22,16 +22,18 @@
 </style><style type="text/css">@media print{#STTBimg{ display:none; }#STTBimg2{ display:none; }}</style></head>
 
 <body><img id="STTBimg" src="chrome-extension://chinfkfmaefdlchhempbfgbdagheknoj/arrows/arrow_blue.png" style="opacity: 0.5; position: fixed; width: 50px; height: auto; z-index: 2147483647; border: 0px; padding: 0px; right: 20px; top: 50%; margin: -25px 0px 0px; cursor: pointer; display: none;">
-          <h1 class="top">优秀护理团队形象展示</h1>
-        <h2 class="top">空军特色医学中心中西医结合正骨科护理团队</h2>
+    <div class="row" style="text-align:center;">     
+        <h1>优秀护理团队形象展示</h1>
+        <h2>空军特色医学中心中西医结合正骨科护理团队</h2>
+    </div>
    <div class="row" style="text-align:center;">
-        <img src="./imgs/icon.png">
+        <img src="./imgs/icon.png" class="u11">
     </div>   
   
   <div class="block">
         
     <div class="row" style="text-align:center;">
-        <img src="./imgs/intro1.jpg" class="u11">
+        <img src="./imgs/intro1.jpg">
     </div>   
         <div class="down">
             <div class="row">
