--- a/intro.htm
+++ b/intro.htm
@@ -33,12 +33,12 @@
   <div class="block">
         
     <div class="row" style="text-align:center;">
-        <img src="./imgs/intro1.jpg">
+        <img src="./imgs/intro1.jpg" style="width:100%;">
     </div>   
         <div class="down">
             <div class="row">
 <!--                 <div class="left">1. </div> -->
-                <div class="right">空军特色医学中心中西医结合正骨科创建于1984年，1986年被批准为全军医学重点专科中心；
+                <div class="right">&nbsp;&nbsp;&nbsp;&nbsp;空军特色医学中心中西医结合正骨科创建于1984年，1986年被批准为全军医学重点专科中心；
                   2002年被批准为国家中医药管理局脊柱软伤专病中心；2009年被批准为全军航空护理示范基地，2021年被批准为中心专科护理培训基地，
                   2023年被复评为国家中医药管理高水平重点专科中心，2024年复评为全军临床重点专科中心。科室创始人冯天有教授，
                   以“新医正骨疗法”治疗脊柱软伤疾病为主要特色，现已发展成为国内同类专科中心中规模最大的医疗护理单元，
@@ -48,7 +48,7 @@
             </div>
             <div class="row">
 <!--                 <div class="left">2. </div> -->
-                <div class="right">目前科室护理团队24名护士，副主任护师1名，主管护师4名，护师13名，护士6名。
+                <div class="right">&nbsp;&nbsp;&nbsp;&nbsp;目前科室护理团队24名护士，副主任护师1名，主管护师4名，护师13名，护士6名。
                   护理团队成员分别获得国家人力资源部颁发的高级EAP执行师证书；获得国家级心理咨询师证书；获得全军航空护理专科护士认证；
                   获得全军骨科专科护士认证；获得美国心脏学会（BLS）资格认证；获得国家健康管理师等等。自科室创建50余年以来，
                   护理组一直致力于研究手法治疗颈腰痛疾病的护理常规。现任护士长甄鹰副主任护师，毕业于第二军医大学护理系，中共十九大党代表，
@@ -63,7 +63,7 @@
             </div>
             <div class="row">
 <!--                 <div class="left">3. </div> -->
-                <div class="right">护理团队始终以伤病员为中心，全心全意为伤病员服务，医护患关系和谐。爱岗敬业，无私奉献，本职岗位工作表现突出。
+                <div class="right">&nbsp;&nbsp;&nbsp;&nbsp;护理团队始终以伤病员为中心，全心全意为伤病员服务，医护患关系和谐。爱岗敬业，无私奉献，本职岗位工作表现突出。
                   多次参加军队演习任务，参加汶川抗震救灾医疗队及疫情防控工作，特殊时期圆满完成上级指派的发热门诊、核酸采集、疫苗注射、两会保障等重大任务 。
                   依托冯天有教授创立的“新医正骨疗法”和国家及全军重点医学专科平台，总结五十余年的专科护理经验，在国内首先提出并临床印证了颈腰痛患者保守治疗临床护理系统及康复规范。
                   在多项国家及军队重点课题的支持下，在科室医疗专家和医生团队的协助下，通过分析近十年颈腰痛住院患者专科护理数据库，在心理护理、生活护理、治疗护理、
@@ -72,7 +72,7 @@
             </div>
            <div class="row">
 <!--                 <div class="left">3. </div> -->
-                <div class="right">近年来,正骨护理团队不断加强与同行间的交流与合作，护理团队具有十分娴熟的业务能力和长期临床一线护理工作经验。
+                <div class="right">&nbsp;&nbsp;&nbsp;&nbsp;近年来,正骨护理团队不断加强与同行间的交流与合作，护理团队具有十分娴熟的业务能力和长期临床一线护理工作经验。
                   除了精通专科护理及康复知识技能，同时具备良好的沟通能力。中西医结合正骨科护理团队用实际行动诠释“护佑生命、竭诚奉献、专业精湛、勇气非凡”的南丁格尔精神。</div>
             </div>
 <!--             <div class="row pic">
