--- a/intro.htm
+++ b/intro.htm
@@ -23,8 +23,8 @@
 
 <body><img id="STTBimg" src="chrome-extension://chinfkfmaefdlchhempbfgbdagheknoj/arrows/arrow_blue.png" style="opacity: 0.5; position: fixed; width: 50px; height: auto; z-index: 2147483647; border: 0px; padding: 0px; right: 20px; top: 50%; margin: -25px 0px 0px; cursor: pointer; display: none;">
     <div class="row" style="text-align:center;">     
-        <h1>优秀护理团队形象展示</h1>
-        <h2>空军特色医学中心中西医结合正骨科护理团队</h2>
+        <h2 style="width:90%;">优秀护理团队形象展示</h2>
+        <h4 style="width:90%;">空军特色医学中心中西医结合正骨科护理团队</h4>
     </div>
    <div class="row" style="text-align:center;">
         <img src="./imgs/icon.png" class="u11">
