Update and rename mobile_view.html to img_view251217.html

--- a/imgs/img_view251217.html
+++ b/imgs/img_view251217.html
@@ -58,14 +58,15 @@
 <body>
     <div class="image-container">
         <div class="image-wrapper">
-            <img src="251215img01.jpg" alt="图片1" loading="lazy">
+            <img src="251217img01.png" alt="图片1" loading="lazy">
         </div>
         <div class="image-title"></div>
         
         <div class="image-wrapper">
-            <img src="251215img02.jpg" alt="图片2" loading="lazy">
+            <img src="251217img02.png" alt="图片2" loading="lazy">
         </div>
         <div class="image-title"></div>
     </div>
 </body>
+
 </html>
